--- a/settings.json
+++ b/settings.json
@@ -1,31 +1,34 @@
 {
-  "window.zoomLevel": 1,
-  "editor.fontSize": 15,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "git.autofetch": true,
-  "explorer.confirmDelete": false,
-  "explorer.confirmDragAndDrop": false,
-  "workbench.colorTheme": "Shades of Purple",
-  "terminal.integrated.shell.linux": "/bin/bash",
-  "eslint.alwaysShowStatus": true,
-  "eslint.options": {
-    "env": {
-      "es6": true
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "git.autofetch": true,
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
+    "workbench.colorTheme": "Shades of Purple",
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true,
+      "source.fixAll.stylelint": true
     },
-    "parserOptions": {
-      "ecmaVersion": 7
-    }
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "vs-kubernetes": {
-    "vs-kubernetes.minikube-path.linux": "/home/luisbarroso/.vs-kubernetes/tools/minikube/linux-amd64/minikube"
-  },
-  "cSpell.userWords": [
-    "pomodoro"
-  ]
+    "eslint.validate": ["javascript"],
+    "[javascriptreact]": {
+      "editor.formatOnSave": true,
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+      "editor.formatOnSave": true,
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescriptreact]": {
+      "editor.formatOnSave": true,
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "eslint.options": {
+        "env":{
+            "es6":true
+        },
+        "parserOptions": {
+            "ecmaVersion": 6 // or 7,8,9
+        }
+    },
+    "jshint.enable": false,
+    "diffEditor.ignoreTrimWhitespace": false,
 }
